fix: add extra margin to amount-num in cart.html

--- a/src/blocks/product/__amount-num/product__amount-num.css
+++ b/src/blocks/product/__amount-num/product__amount-num.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.product_place_cart .product__amount-num {
+  margin: 0 5px;
+}
+
 @media (min-width: 1024px) {
   .product_place_cart .product__amount-num {
     font-size: 1.2rem;
